# patkit

./: .gitignore  README.md  integration_tests.sh  pyproject.toml  rudimentary_tests.sh
.github/workflows/: release.yaml  test.yaml  test_release.yaml
derived_data/tongue_data_1/: configuration.yaml  patkit-data.yaml  patkit.yaml
derived_data/tongue_data_1_1/: patkit-data.yaml
devel/: doc_generation_commands  generate_docs.py
docs/: Automated_exercises.markdown  Bugs.markdown  Changelog.markdown  Configuration.markdown  Contributors.markdown  CoreDataStructures.markdown  DataManagement.markdown  Development_guide.markdown  DirectoryStructure.markdown  Installing.markdown  Installing_and_using.markdown  Keyboard_shortcuts.markdown  PATKIT_GUI_versions.markdown  Running.markdown  SetupForDevelopment.markdown  Test_data.markdown  base_classes.markdown  base_data_structures.drawio  core_data_structures.drawio  data_management.drawio  index.md
docs/api/: patkit.html  search.js
example_configs/ultrafest24/: configuration.yaml  simulation_parameters.yaml
exercises/minimal/: patkit-data.yaml  patkit-gui.yaml
old_script_files/: example_spline_script.py  pd_spectrogram.py  publish.py
recorded_data/assignment_example/: automatic.TextGrid  exercise.TextGrid  patkit.TextGrid  segmentation.TextGrid
recorded_data/minimal/: File008.TextGrid
scenarios/linguistics_demo/: patkit-gui.yaml
scenarios/minimal/: patkit-data.yaml  patkit-gui.yaml
scenarios/tongue_data_1_1/: patkit-gui.yaml
scenarios/tongue_data_2/: patkit_exclusion_list.yaml
scenarios/ultrasound_intensity/: patkit-data.yaml  patkit-gui.yaml
scripts/: dat_to_wav.py
src/patkit/: __init__.py  cli.py  cli_commands.py  cli_helpers.py  computational.py  constants.py  data_loader.py  data_processor.py  errors.py  get_modality_types.py  initialise.py  interpolate_raw_uti.py  interpreter.py  patgrid.py  path_resolution.py  qt_annotator.py  satgrid.py  (+1 more)
tests/: test_cli_commands.py  test_integration.py  test_path_resolution.py  test_qt_annotator.py  test_save_manifest.py
(+208 files in other folders)
