
[project]
name = "patkit"
version = "0.22.2"
description = "Phonetic Analysis ToolKit: Tools for processing phonetic data"
authors = [
  {email = "giuthas@gmail.com"},
  {name = "Pertti Palo, Scott Moisik, Matthew Faytak, Motoki Saito"},
]
license = {file = "LICENSE.markdown"}
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
#  "Intended Audience :: Speech researchers and students",
]
keywords = ["phonetics", "speech", "articulation", "textgrid", "ultrasound", "splines"]
maintainers = [
  {name = "Pertti Palo", email = "giuthas@gmail.com"},
]
requires-python = ">=3.10.13"
dependencies = [
  "bioread>=3.0.1",
  "click>=8.1.8",
  "click-default-group>=1.2.4",
  "dipy>=1.10.0",
  "fonttools>=4.55.3",
  "jinja2>=3.1.5",
  "matplotlib>=3.10.0",
  "more-itertools>=10.5.0",
  "mpl-point-clicker>=0.4.1",
  "nestedtext>=3.7",
  "numpy>=2.2.1",
  "pillow>=12.2.0",
  "praat-textgrids>=1.4.0",
  "pydantic>=2.10.4",
  "pydicom>=3.0.2",
  "pyqt6>=6.10.0",
  "pyreadline3>=3.5.4 ; platform_system == 'Windows'",
  "qbstyles>=0.1.4",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "sk-video>=1.1.10",
  "sounddevice>=0.5.5",
  "strictyaml>=1.7.3",
]


[dependency-groups]
dev = [
    "build>=1.5.0",
    "deepdiff>=8.6.2",
    "icecream>=2.2.0",
    "licenseheaders>=0.8.8",
    "pdoc>=16.0.0",
    "pygments>=2.19.2",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "setuptools>=82.0.1",
    "virtualenv>=21.3.3",
]

[project.urls]
bug_tracker = "https://github.com/giuthas/patkit/issues"
changelog = "https://github.com/giuthas/patkit/blob/main/docs/Release_notes.markdown"
documentation = "https://giuthas.github.io/patkit/"
homepage = "https://github.com/giuthas/patkit/"
repository = "https://github.com/giuthas/patkit/"

[project.scripts]
patkit = "patkit:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/patkit"]

